tests/samples/wait-to-set-constant.err
wait-to-set-constant.flow:2:Syntax error. "do\n  wait *1\ndone\n".
