tests/samples/wait-to-set-constant.flow
flow onboarding do
  wait 1
done
